infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          # image: us.gcr.io/ticketing-dev-318704/expiration
          image: delwinrbest/expiration
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/tickets/healthz
              port: 3000
              httpHeaders:
                - name: Content-Type
                  value: application/json
            initialDelaySeconds: 60
            periodSeconds: 3
