infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 5
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          # image: us.gcr.io/ticketing-dev-318704/orders
          image: delwinrbest/orders
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/orders/healthz
              port: 3000
              httpHeaders:
                - name: Content-Type
                  value: application/json
            initialDelaySeconds: 60
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
