infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          # image: us.gcr.io/ticketing-dev-318704/payments
          image: delwinrbest/payments
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/payments/healthz
              port: 3000
              httpHeaders:
                - name: Content-Type
                  value: application/json
            initialDelaySeconds: 60
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
